folder structure updated, gitignore file updated, system audit log schema controller created and implemented in frontend
