# server/index.js
@@ -44,7 +44,6 @@ app.use(cookieParser());
 
 s3Connect();
 
-
 app.use('/api', allowOnlyAppOrWebsite);
 
 if (process.env.NODE_DEV === 'development') {
@@ -92,10 +91,7 @@ app.use("/api/v1/coupon", require("./routes/couponRoute"))
 app.use("/api/v1/service-update-request", require("./routes/serviceUpdateRequestRoute"))
 app.use("/api/v1/reward", require("./routes/rewardRoute"))
 app.use("/api/v1/notification", require("./routes/notificationRoute"))
-
-
-
-
+app.use("/api/v1/system-audit-logs", require("./routes/systemAuditLogsRoute"));
 
 app.get("/", (req, res) => {
   return res.json({
